# RAAS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEV_README.md  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  fly.toml  pyproject.toml  start.sh
.github/: release-v0.1.0.md
api/: README.md  embed_check.py  main.py  requirements.txt
api/core/: auth.py  chroma_config.py  config.py  db.py  docs_store.py  store.py
api/models/: schemas.py
api/routes/: auth.py  docs.py  health.py  ingest.py  jobs.py  legacy.py  projects.py  query.py
api/services/: chroma_repo.py  chroma_service.py  chunker.py  doc_registry.py  embedder.py  index_job_service.py  index_service.py  ingest_service.py  job_registry.py  project_registry.py  relevance_service.py  retrieval_registry.py  retrieval_service.py  text_extractor.py
frontend/: package-lock.json  package.json
raas-frontend/: README.md  package-lock.json  package.json
raas-frontend/app/: globals.css  layout.tsx  page.tsx
raas-frontend/app/app/: page.tsx
raas-frontend/app/app/[projectId]/: page.tsx
raas-frontend/app/app/[projectId]/docs/: page.tsx
raas-frontend/app/utils/: adminAuthModal.tsx  adminSession.ts  apiBaseUrl.ts  projectValidation.ts  validationModal.tsx
raas-frontend/types/: api.ts
